Added TotalPrice API comprehension. Updated Context accessibility. Updated Model configuration. Updated docs.

--- a/src/Cascade.Challenges.Books.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Cascade.Challenges.Books.Mvc/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="IndexByAuth">Books by Author</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="TotalPrice">Total Price</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
